[package]
name = "text-image"
version = "0.1.2"
edition = "2021"
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/andelf/text-image"
documentation = "https://docs.rs/text-image"
homepage = "https://github.com/andelf/text-image"
categories = []
description = "A proc-macro to generate raw image from text and a font file, for embedded-graphics."
keywords = ["embedded-graphcs", "image", "text", "proc-macro"]
readme = "README.md"
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
image = "0.25.2"
imageproc = "0.25.0"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits", "full", "parsing"] }
ab_glyph = "0.2.28"

[workspace]
members = ["demo"]
